[package]
name = "depintel"
version = "0.1.3"
edition = "2021"
description = "Maven dependency intelligence CLI — conflict scoring, path tracing, CVE audit"
license = "MIT"
repository = "https://github.com/urunsiyabend/depintel"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
quick-xml = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
ureq = { version = "2", features = ["tls", "json"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
